<resources>
    <string name="app_name">srv_client</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AR client</string>
    <string name="Login">Login</string>
    <string name="UserName">User Name</string>
    <string name="pass">Password</string>
    <string name="ping">Ping</string>
    <string name="getProjects">get All Projects</string>
    <string name="a3DBIM">3D BIM</string>
    <string name="a4DBIM">4D BIM</string>
    <string name="other">other</string>
    <string name="hello">Hello World, ASimpleAppUsingARActivity!</string>
    <string name="xAxis">X Axis:</string>
    <string name="yAxis">Y Axis:</string>
    <string name="zAxis">Z Axis:</string>
    <string name="heading">Heading:</string>
    <string name="pitch">Pitch:</string>
    <string name="roll">Roll:</string>
    <string name="altitude">Altitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="date">Date:</string>
    <string name="empty"></string>
    <string name="help">This is the example app from Chapter 6 of Pro Android Augmented Reality. This app outlines some of the basic features of Augmented Reality and how to implement them in real world applications.</string>
    <string name="LoadModelBTN">AUGMENT</string>
    <string name="pickDateBTN">Pick date</string>
    <string name="UserNameHit">e - mail</string>
    <string name="Augment">Augment</string>
        <string name="selectAdate">Select a date</string>

</resources>